Fixed gap between header and navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ footer{
 }
 .jumbotron{
     margin: 0;
-    padding: 30px;
+    padding: 0px;
     background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b); 
     color: white;
 }
